# vigir_onboard_footstep_manager

./: .gitignore  CMakeLists.txt  LICENSE.md  README  package.xml
adept/.svn/: all-wcprops  entries
adept_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
adept_moveit_config/config/: ADEPT_VIPER_S650.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
adept_moveit_config/launch/: .planning_context.launch.swp  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  osu_adept.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
adept_moveit_connector/: .setup_assistant  CMakeLists.txt  package.xml
adept_moveit_connector/config/: ADEPT_VIPER_S650.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_depth.yaml  sensors_kinect.yaml
adept_moveit_connector/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
adept_moveit_connector/scripts/: adept_joint_state_publisher.py
adept_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
adept_moveit_generated/config/: ADEPT_VIPER_S650.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
adept_moveit_generated/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_rviz_configed.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
adept_shake_test/: CMakeLists.txt  package.xml
adept_shake_test/src/: shake_adept.py
flor_ikfast/robot/: atlas.urdf  atlas_arm.urdf  atlas_left_arm.xml  atlas_left_leg.xml
flor_ikfast/src/: README  atlas_ik.py  ikfast.py  ikfast_generator_cpp.py  ikfast_generator_cpp_060.py  ikfast_generator_cpp_090.py  test_sympy_jacobians.py
hullify/: CMakeCache.txt  CMakeLists.txt  bookmarks.html  branch_test.txt  full_display.rviz  package.xml
hullify/docs/: Running Adept_Atlas.odt  mathematical_foundations.txt  test_todos.txt
hullify/include/: cluster_segmentation.h  hullify_module_view.h  hullify_view.h  mesh_bound.h  plane_reps_and_3dmath.h  pose_transform.h  qhull_interface.h
hullify/launch/: default.launch  half_osu_adept_system.launch  hull_testing.launch  osu_adept_common.launch  osu_manual_box_selection.launch  osu_plugin_selection.launch
hullify/meshes/: README  info.txt
hullify/msg/: Mesh_and_bounds.msg
hullify/rviz_configs/: final_pipeline_config.rviz  kinect_rviz_config.rviz  plane_testing.rviz
hullify/src/: README  cluster_segmentation.cpp  convex_hull_qhull_ext.cpp  greedy_proj.cpp  hull_tests.cpp  hullify.cpp  hullify_view.cpp  mesh_bound.cpp  plane_reps_and_3dmath.cpp  pose_transform.cpp  pose_transform_driver.cpp  qhull_interface.cpp  simple_hull.cpp
hullify/test/: test_hullify.cpp  test_pose.cpp
kinect_ptcloud_converter/: CMakeLists.txt  package.xml
kinect_ptcloud_converter/launch/: set_up_kinect.launch
kinect_ptcloud_converter/src/: kinect_ptcloud_node.cpp  kinect_slow_publish.cpp  kinect_transform_publisher.cpp  raycast_retrieval_test.cpp  selected_points_transformer.cpp
launch/: vigir_footstep_manager_thor.launch
moveit_int/: CMakeLists.txt  package.xml
moveit_int/src/: ToDo.txt  programmatic_moveit.cpp
osu_grasp_msgs/: CMakeLists.txt  package.xml
osu_grasp_msgs/msg/: Mesh_and_bounds.msg
osu_ros_adept/: CMakeLists.txt
osu_ros_adept/.svn/: all-wcprops  entries
osu_ros_adept/Docs/: ROS setup instructions.odt
osu_ros_adept/launch/: start_basic_connection.launch
osu_ros_adept/msg/: Buttons.msg
osu_ros_adept/scripts/: controller_comm_client.py  controller_feedback_client.py
osu_ros_adept/src/: RAVE_ADEPT.py  joy_to_RAVE.py
osu_ros_adept/srv/: ChangeObject.srv  PoseCheck.srv  robot_movement_command.srv
rave_to_moveit/: CMakeLists.txt  ToDo.txt  package.xml
rave_to_moveit/deb/: collada-dom-dev_2.4.3.0-ubuntu1~precise1_amd64.deb  collada-dom2.4-dp-base_2.4.3.0-ubuntu1~precise1_amd64.deb  collada-dom2.4-dp-dev_2.4.3.0-ubuntu1~precise1_amd64.deb  collada-dom2.4-dp_2.4.3.0-ubuntu1~precise1_amd64.deb
rave_to_moveit/robots/: adeptsetup.robot.xml  l_robotiq_hand.dae  robotiq.dae
rave_to_moveit/scenes/: grasp_target.env.xml  test2.env.xml
rave_to_moveit/src/: SimEnvLoading.py  atlas_and_ik.py  grasping.py  grasping_param_playing.py  (+3 more)
src/: footstep_manager.cpp  footstep_manager.h  main.cpp
turbo-ros-pkg/: README
vigir_atlas_sim_ros_control/: CMakeLists.txt  package.xml
vigir_atlas_sim_ros_control/config/: force_torque_controllers.yaml  force_torque_sensor_controller.yaml  imu_sensor_controller.yaml  position_controllers.yaml  trajectory_controllers.yaml
vigir_atlas_sim_ros_control/include/vigir_atlas_sim_ros_control/: atlas_sim_ros_control.h
vigir_atlas_sim_ros_control/launch/: position_controllers.launch  start_default.launch  start_moveit_with_traj_controllers.launch  trajectory_controllers.launch
vigir_atlas_sim_ros_control/src/: atlas_sim_ros_control.cpp  atlas_sim_ros_control.cpp.autosave
vigir_drive/: CMakeLists.txt  manifest.xml  package.xml
vigir_drive/launch/: vigir_cheat_driver.launch  vigir_cheat_walker.launch
vigir_drive/src/: cheat_drive.cpp  cheat_walk.cpp  keyboard_drive.cpp
vigir_launch_sandbox/: mainpage.dox  manifest.xml
vigir_ocs_msg2/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_onboard_footstep_manager/: CMakeLists.txt  package.xml  vigir_onboard_footstep_manager.xml
(+108 files in other folders)
