<?xml version="1.0"?>
<package>
  <name>vigir_atlas_sim_ros_control</name>
  <version>0.0.0</version>
  <description>The vigir_atlas_sim_ros_control package</description>

  <maintainer email="kohlbrecher@todo.todo">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@todo.todo">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>osrf_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>osrf_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
  
</package>
